--- a/src/tool_asset_system/web/templates/base.html
+++ b/src/tool_asset_system/web/templates/base.html
@@ -19,6 +19,7 @@
         <a href="{{ url_for('parts.parts_archived') }}">Archived</a>
         <a href="{{ url_for('assemblies.assemblies_list') }}">Assemblies</a>
         <a href="{{ url_for('assemblies.assemblies_new') }}">New Assembly</a>
+        <a href="{{ url_for('tooling_lists.tooling_lists_list') }}">Tooling Lists</a>
       </nav>
     </header>
 
