--- a/src/tool_asset_system/web/templates/assemblies_new.html
+++ b/src/tool_asset_system/web/templates/assemblies_new.html
@@ -130,7 +130,12 @@
                     {% for r in parts_rows %}
                     <tr data-asset-code="{{ r.asset_code }}" data-layer="{{ r.layer_code }}">
                         <td><input type="checkbox" class="pick-check" data-ac="{{ r.asset_code }}"></td>
-                        <td><code>{{ r.asset_code }}</code></td>
+                        <td>
+                            <a href="{{ url_for('parts.part_detail', asset_code=r.asset_code) }}" target="_blank"
+                                rel="noopener noreferrer">
+                                <code>{{ r.asset_code }}</code>
+                            </a>
+                        </td>
 
                         <td>
                             {% set opts = (role_choices_by_layer.get(r.layer_code) if role_choices_by_layer is defined
@@ -150,8 +155,9 @@
                         </td>
 
                         <td>
-                            <input type="number" step="0.001" class="pick-qty" data-ac="{{ r.asset_code }}"
-                                name="qty_{{ r.asset_code }}" value="{{ form.get('qty_' ~ r.asset_code, '1') }}">
+                            <input type="number" class="pick-qty" data-ac="{{ r.asset_code }}"
+                                name="qty_{{ r.asset_code }}" value="{{ form.get('qty_' ~ r.asset_code, '1') }}"
+                                step="1" min="1" inputmode="numeric" pattern="[0-9]*">
                         </td>
 
                         <td>{{ r.layer_code }}</td>
