feat: update tooling lists detail view to reorder columns and enhance item links

--- a/src/tool_asset_system/web/templates/tooling_lists_list.html
+++ b/src/tool_asset_system/web/templates/tooling_lists_list.html
@@ -11,7 +11,8 @@
     </label>
     <div class="filter-search">
         <button type="submit">Filter</button>
-        <a class="btn-link" href="{{ url_for('tooling_lists.tooling_lists_new') }}">New Tooling List</a>
+        <a class="btn-link" href="{{ url_for('tooling_lists.tooling_lists_new', reset=1) }}">New Tooling List</a>
+
     </div>
 </form>
 
