--- a/src/tool_asset_system/web/templates/tooling_lists_detail.html
+++ b/src/tool_asset_system/web/templates/tooling_lists_detail.html
@@ -15,6 +15,7 @@
 
 <div class="detail-actions">
     <a class="btn-link" href="{{ url_for('tooling_lists.tooling_lists_list') }}">Back</a>
+    <a class="btn-link" href="{{ url_for('tooling_lists.tooling_list_edit', list_code=tl.list_code) }}">Edit items</a>
 </div>
 
 <div class="detail-grid">
